--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,11 +10,15 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.21.1",
     "date-fns": "^2.21.1",
     "echarts": "^5.1.0",
+    "google-map-react": "^2.1.9",
+    "google-maps-react": "^2.0.6",
     "rc-echarts": "^0.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-google-maps": "^9.4.5",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
   },
