--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^17.0.2",
     "react-google-maps": "^9.4.5",
     "react-scripts": "4.0.3",
+    "react-wordcloud": "^1.2.7",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
