CCC: add global docker network

--- a/OpenStack_Docker_Couchdb/deploy.yaml
+++ b/OpenStack_Docker_Couchdb/deploy.yaml
@@ -17,4 +17,5 @@
     - role: docker-configuration-couchdb
     - role: docker-installation
     - role: docker-proxy
+    - role: docker-create-network
     - role: deploy
