--- a/OpenStack_Docker_Couchdb/host_vars/work.yaml
+++ b/OpenStack_Docker_Couchdb/host_vars/work.yaml
@@ -42,7 +42,7 @@ instances:
 
 instance_image: f8b79936-6616-4a22-b55d-0d0a1d27bceb
 instance_key_name: ada
-instance_flavor: uom.mse.2c9g
+# instance_flavor: uom.mse.2c9g
 
 
 dockerhub_username:
