--- a/OpenStack_Docker_Couchdb/roles/deploy/tasks/main.yaml
+++ b/OpenStack_Docker_Couchdb/roles/deploy/tasks/main.yaml
@@ -1,6 +1,20 @@
+- name: copy frontend from local to remote hosts
+  become: yes
+  copy:
+    src: ../frontend
+    dest: /home/ubuntu
+    mode: u=rw
+
+- name: copy backend from local to remote hosts
+  become: yes
+  copy:
+    src: ../backend
+    dest: /home/ubuntu
+    mode: u=rw
+
 - name: run docker compose frontend
   docker_compose:
-    project_src: "../frontend/"
+    project_src: /home/ubuntu/frontend
     build: yes
     remove_orphans: yes
     remove_volumes: yes
@@ -8,7 +22,7 @@
 
 - name: run docker compose backend
   docker_compose:
-    project_src: "../backend/"
+    project_src: /home/ubuntu/backend
     build: yes
     remove_orphans: yes
     remove_volumes: yes
