CCC: comment docker_login

--- a/OpenStack_Docker_Couchdb/roles/docker-create-network/tasks/main.yaml
+++ b/OpenStack_Docker_Couchdb/roles/docker-create-network/tasks/main.yaml
@@ -1,9 +1,9 @@
----
-- name: Log into a personal DockerHub
-  become: yes
-  docker_login:
-    username: '{{ dockerhub_username }}'
-    password: '{{ dockerhub_password }}'
+# ---
+# - name: Log into a personal DockerHub
+#   become: yes
+#   docker_login:
+#     username: '{{ dockerhub_username }}'
+#     password: '{{ dockerhub_password }}'
 
 
 - name: Create docker network called net-aio
