--- a/OpenStack_Docker_Couchdb/roles/docker-pull-image/tasks/main.yaml
+++ b/OpenStack_Docker_Couchdb/roles/docker-pull-image/tasks/main.yaml
@@ -1,9 +1,9 @@
----
-- name: Log into a personal DockerHub
-  become: yes
-  docker_login:
-    username: '{{ dockerhub_username }}'
-    password: '{{ dockerhub_password }}'
+# ---
+# - name: Log into a personal DockerHub
+#   become: yes
+#   docker_login:
+#     username: '{{ dockerhub_username }}'
+#     password: '{{ dockerhub_password }}'
 
 
 - name: Pull an image called test
@@ -11,11 +11,3 @@
   docker_image:
     name: '{{ dockerhub_pulling_image }}'
     source: pull
-    
-
-   
-
-  
-
-
-
