--- a/crawler/Dockerfile
+++ b/crawler/Dockerfile
@@ -8,8 +8,8 @@ ENV no_proxy localhost,127.0.0.1,localaddress,172.16.0.0/12,.melbourne.rc.nectar
 
 
 
-COPY streaming_to_couchdb.py
-COPY swear_word.txt
+COPY . .
+
 
 RUN pip3 install --upgrade pip3
 RUN pip3 install tweepy
@@ -17,4 +17,4 @@ RUN pip3 install tweet-preprocessor
 RUN pip3 install couchdb
 
 
-CMD python3 streaming_to_couchdb.py
+CMD ["python3", "streaming_to_couchdb.py"]
