--- a/OpenStack_Docker_Couchdb/3-deploy-crawler.yaml
+++ b/OpenStack_Docker_Couchdb/3-deploy-crawler.yaml
@@ -13,6 +13,9 @@
   gather_facts: true
 
   roles:
+    - role: openstack-proxy
+    - role: docker-installation
+    - role: docker-proxy
     - role: couchdb-run-crawler
 
 # Couchdb run
