CCC: fix install

--- a/OpenStack_Docker_Couchdb/3-deploy-crawler.yaml
+++ b/OpenStack_Docker_Couchdb/3-deploy-crawler.yaml
@@ -14,6 +14,7 @@
 
   roles:
     - role: openstack-proxy
+    - role: install-dependency
     - role: docker-installation
     - role: docker-proxy
     - role: couchdb-run-crawler
